[package]
name = "brawl-frame-data-web"
version = "0.1.0"
edition = "2018"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Uses brawllib_rs to display frame data of characters"
repository = "https://github.com/rukai/brawl-frame-data-web"

[dependencies]
# TODO: get brawllib_rs from crates.io. waiting on next three-rs release
brawllib_rs = { git = "https://github.com/rukai/brawllib_rs" }
getopts = "0.2"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["handlebars_templates"] }
serde_derive = "1"
serde = "1"
serde_json = "1"

[build-dependencies]
simple_command = "0.1"

[profile.release]
debug-assertions = true
