[package]
name = "rukaidata_bot"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
edition = "2021"
description = "Discord bot to provide rukaidata links"
repository = "https://github.com/rukai/rukaidata"

[dependencies]
#serenity = { version = "0.10.9", default-features=false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
serenity = { version = "0.10.9", default-features=false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"], git = "https://github.com/serenity-rs/serenity", branch = "current" }
time = "0.3.7"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
