[package]
name = "rukaidata_bot"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
edition = "2024"
description = "Discord bot to provide rukaidata links"
repository = "https://github.com/rukai/rukaidata"

[dependencies]
poise = { version = "0.6.1" }
time = "0.3.7"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
