[package]
name = "fighter_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brawllib_rs = "0.23"
wgpu = { version = "0.12", features = ["webgl"] }
log = "0.4"
bincode = "1"

# wasm
console_log = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'DomTokenList',
  'Headers',
  'HtmlCanvasElement',
  'HtmlCollection',
  'HtmlInputElement',
  'HtmlSelectElement',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib"]
