[package]
name = "fighter_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#brawllib_rs = "0.24"
brawllib_rs = { git = "https://github.com/rukai/brawllib_rs" }
wgpu = { version = "0.12", features = ["webgl"] }
log = "0.4"
bincode = "1"
# TODO: remove and make brawllib set the css-size feature when css-size is upstreamed
winit = { version = "0.26", features = ["css-size"]}

# wasm
console_log = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'DomTokenList',
  'Headers',
  'HtmlCanvasElement',
  'HtmlCollection',
  'HtmlInputElement',
  'HtmlSelectElement',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
winit = { git = "https://github.com/rukai/winit", branch = "rukaidata_fork"}
