[package]
name = "brawl-frame-data-web"
version = "0.1.0"
edition = "2018"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Uses brawllib_rs to display frame data of characters"
repository = "https://github.com/rukai/brawl-frame-data-web"

[dependencies]
brawllib_rs = "0.3"
getopts = "0.2"
serde_derive = "1"
serde = "1"
serde_json = "1"
env_logger = "0.6"
log = "0.4"
handlebars = "1"
rayon = "1"
minifier = "0.0"
sha2 = "0.8"

[profile.release]
debug-assertions = true
