[package]
name = "rukaidata_website"
version = "0.1.0"
edition = "2018"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Uses brawllib_rs to display frame data of characters"
repository = "https://github.com/rukai/rukaidata"

[dependencies]
brawllib_rs = "0.19"
getopts = "0.2"
serde_derive = "1"
serde = "1"
serde_json = "1"
env_logger = "0.8"
log = "0.4"
handlebars = { version = "3", features = ["dir_source"] }
rayon = "1"
minifier = "0.0"
sha2 = "0.9"
futures = "0.3"
num_cpus = "1"
