[package]
name = "rukaidata_website"
version = "0.1.0"
edition = "2021"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Uses brawllib_rs to display frame data of characters"
repository = "https://github.com/rukai/rukaidata"

[dependencies]
brawllib_rs = "0.26"
serde_derive = "1"
serde = "1"
serde_json = "1"
env_logger = "0.11"
log = "0.4"
# This guy has no idea how to semver, not worth my time updating
handlebars = { version = "=4.2.2", features = ["dir_source"] }
rayon = "1"
minifier = "0.3"
sha2 = "0.10"
futures = "0.3"
subprocess = "0.2.7"
bincode = "1"
wasm-bindgen-cli-support = "0.2.78"
flate2 = "1.0.28"
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.3"
tower-http = { version = "0.5.0", features = ["fs"] }
clap = { version = "4.4.12", features = ["derive"] }
base64 = "0.22.1"
anstyle = "1.0.7"
anyhow = "1"